--- a/frontend/ShareEngine/package.json
+++ b/frontend/ShareEngine/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.12",
     "@react-navigation/native-stack": "^6.9.18",
     "react": "18.2.0",
     "react-native": "^0.73.4",
