--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,8 +4,19 @@ ENV PYTHONUNBUFFERD True
 
 ENV APP_HOME /app
 WORKDIR $APP_HOME
-COPY . ./
+
+RUN pip install poetry
+
+COPY pyproject.toml poetry.lock* /app/
+
+RUN poetry config virtualenvs.create false \
+  && poetry install --no-dev
+
+COPY ./app ./app
+COPY ./scripts ./scripts
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-CMD exec gunicorn --bind :8080 --workers 1 --threads 8 --timeout 0 main:app
+# CMD exec gunicorn --bind :8080 --workers 1 --threads 8 --timeout 0 main:app
+
+CMD ["bash", "./scripts/run.sh"]
