--- a/frontend/ShareEngine/package.json
+++ b/frontend/ShareEngine/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.12",
+    "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "react": "18.2.0",
     "react-native": "^0.73.4",
+    "react-native-image-picker": "^7.1.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "rn-secure-storage": "^3.0.1"
