--- a/frontend/ShareEngine/package.json
+++ b/frontend/ShareEngine/package.json
@@ -16,6 +16,9 @@
     "react": "18.2.0",
     "react-native": "^0.73.4",
     "react-native-image-picker": "^7.1.0",
+    "react-native-gesture-handler": "^2.15.0",
+    "react-native-reanimated": "^3.7.0",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "rn-secure-storage": "^3.0.1"
