--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,7 @@ fastapi = "^0.109.2"
 uvicorn = "^0.27.0.post1"
 sqlalchemy = "^2.0.25"
 asyncpg = "^0.29.0"
+google-cloud-storage = "^2.14.0"
 
 
 [tool.poetry.dev-dependencies]
