--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - "8000:80"
     environment:
       - DATABASE_URL=postgresql+asyncpg://enginemaker:password@db:5432/shareengine
+      - JWT_SECRET_KEY=CompaniesOverCountries
+      - HASH_ALGORITHM=HS256
     depends_on:
       - db
   db:
