--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,8 @@ uvicorn = "^0.27.0.post1"
 sqlalchemy = "^2.0.25"
 asyncpg = "^0.29.0"
 google-cloud-storage = "^2.14.0"
+pyjwt = "^2.8.0"
+passlib = "^1.7.4"
 
 
 [tool.poetry.dev-dependencies]
