--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,7 @@ asyncpg = "^0.29.0"
 google-cloud-storage = "^2.14.0"
 pyjwt = "^2.8.0"
 passlib = "^1.7.4"
+python-multipart = "^0.0.9"
 
 
 [tool.poetry.dev-dependencies]
