--- a/frontend/ShareEngine/package.json
+++ b/frontend/ShareEngine/package.json
@@ -15,8 +15,8 @@
     "@react-navigation/native-stack": "^6.9.18",
     "react": "18.2.0",
     "react-native": "^0.73.4",
-    "react-native-image-picker": "^7.1.0",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-image-picker": "^7.1.0",
     "react-native-reanimated": "^3.7.0",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.9.0",
@@ -27,8 +27,10 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@react-native-community/cli-platform-android": "^12.3.5",
     "@react-native/babel-preset": "0.73.21",
     "@react-native/eslint-config": "0.73.2",
+    "@react-native/gradle-plugin": "^0.73.4",
     "@react-native/metro-config": "0.73.5",
     "@react-native/typescript-config": "0.73.1",
     "@types/react": "^18.2.6",
