--- a/frontend/ShareEngine/package.json
+++ b/frontend/ShareEngine/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.9.18",
     "react": "18.2.0",
     "react-native": "^0.73.4",
+    "react-native-config": "^1.5.1",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-image-picker": "^7.1.0",
     "react-native-reanimated": "^3.7.0",
