--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,10 +10,10 @@ fastapi = "^0.109.2"
 uvicorn = "^0.27.0.post1"
 sqlalchemy = "^2.0.25"
 asyncpg = "^0.29.0"
-google-cloud-storage = "^2.14.0"
 pyjwt = "^2.8.0"
 passlib = "^1.7.4"
 python-multipart = "^0.0.9"
+boto3 = "^1.34.48"
 
 
 [tool.poetry.dev-dependencies]
