--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -2,8 +2,7 @@ name: Fly Deploy
 on:
   push:
     branches:
-      - infra_cd
-      # - master
+      - main
     paths:
       - 'backend/*'
 jobs:
