github actionの検証のためpathsの指定をコメントアウト

--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -3,8 +3,9 @@ on:
   push:
     branches:
       - main
-    paths:
-      - 'backend/*'
+    # TODO検証が終わったら戻す
+    # paths:
+    #   - 'backend/*'
 jobs:
   deploy:
     name: Deploy app
