--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -13,6 +13,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy backend --remote-only -c backend/fly.toml
+      - run: flyctl deploy ./backend/ --remote-only
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
